# pocketbot

./: CONTRIBUTING.md  DEVELOPMENT.md  FORK.md  README.md  core_agent_lines.sh  pyproject.toml
nanobot/: __init__.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/session/: manager.py
nanobot/web/: __init__.py  server.py
nanobot/web/static/: index.html
pocketbot-app/src/screens/: ChatScreen.tsx
pocketbot-app/src/services/: chat.ts  storage.ts
